# CGA2M_plus

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ja.md  pyproject.toml
examples/: How_to_use_CGA2M+.ipynb
src/CGA2M_plus/: cga2m.py  visualize.py
