[tool.poetry]
name = "CGA2M_plus"
version = "0.1.5"
description = "CGA2M_plus is a Python package of Constraint GA2M plus(CGA2M+). CGA2M+ is a model that improves GA2M in two respects: interpretability and accuracy."
authors = ["M. Kuramata <baisgtud43j@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MK-tech20"
repository = "https://github.com/MK-tech20/CGA2M_plus"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[tool.poetry.dependencies]
python = "^3.7"
lightgbm = "^3.2.1"
numpy = "scikit-learn"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
